welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:15: error: Boolean does not take parameters
  if (estDosMur()()){
                 ^